Fix shadow z-index changed

--- a/source/sass/blocks/development-process.scss
+++ b/source/sass/blocks/development-process.scss
@@ -5,6 +5,7 @@
 
   &::after {
     position: absolute;
+    z-index: -1;
     top: 455px;
     right: 0;
     bottom: 0;
@@ -142,7 +143,6 @@
 }
 
 .development-process__order {
-  z-index: 1;
   margin: 0 33px 32px 33px;
   padding: 14px 19px;
   background-color: $transparent;
